fixed broken CSS

--- a/public/css/theme0.css
+++ b/public/css/theme0.css
@@ -256,8 +256,7 @@ th {
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url('../vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.eot');
-  src: url('../vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('.././vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.svg
-#glyphicons_halflingsregular') format('svg');
+  src: url('../vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('../vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('../vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.woff') format('woff'), url('../vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('.././vendor/bootstrap-multiselect/docs/fonts/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -7065,7 +7064,7 @@ form.admin-user-form input[type="radio"]:first-child {
   }
 }
 
-}
+
  /* Cookie Notice */
 
         div.pn_notebox{
@@ -7086,3 +7085,4 @@ form.admin-user-form input[type="radio"]:first-child {
         div.pn_removed{
             background-color: #FAE3EC;
             border-color: #E00958;
+        }
